--- a/app/src/main/res/layout/activity_tambah_foto.xml
+++ b/app/src/main/res/layout/activity_tambah_foto.xml
@@ -20,6 +20,7 @@
         android:text="Choose"
         android:layout_gravity="center"/>
 
+
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -40,6 +41,13 @@
             android:layout_height="wrap_content"
             android:hint="Caption"/>
     </android.support.design.widget.TextInputLayout>
+
+    <Spinner
+        android:padding="20dp"
+        android:id="@+id/spin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"></Spinner>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/btnPost"
