--- a/app/src/main/res/layout/activity_tambah_foto.xml
+++ b/app/src/main/res/layout/activity_tambah_foto.xml
@@ -29,7 +29,7 @@
             android:id="@+id/tvTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Title"/>
+            android:hint="Judul" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -40,6 +40,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Caption"/>
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/tvLoc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Lokasi" />
     </android.support.design.widget.TextInputLayout>
 
     <Spinner
