--- a/app/src/main/res/layout/foto_row.xml
+++ b/app/src/main/res/layout/foto_row.xml
@@ -65,7 +65,7 @@
                     android:text="Title"
                     android:textStyle="bold"/>
                 <TextView
-                    android:id="@+id/tvDeskripsi"
+                    android:id="@+id/tvLocation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Description"/>
